--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "bops": "~0.1.1"
   },
   "devDependencies": {
-    "mocha": "~1.15.1"
+    "mocha": "~1.15.1",
+    "istanbul": "~0.1.46",
+    "coveralls": "~2.6.0"
   },
   "scripts": {
-    "test": "./node_modules/.bin/mocha"
+    "test": "./node_modules/.bin/mocha",
+    "coverage": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha --report html -- -R spec",
+    "coveralls": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/.bin/coveralls && rm -rf ./coverage"
   },
   "keywords": [
     "tomahawk",
@@ -32,6 +36,6 @@
       "iphone/6",
       "ipad/6"
     ],
-    "harness" : "mocha"
+    "harness": "mocha"
   }
 }
