--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
   "dependencies": {
-    "bops": "~0.1.1"
+    "bops": "~0.1.1",
+    "uuid": "~1.4.1"
   },
   "devDependencies": {
     "mocha": "~1.15.1",
